--- a/package.json
+++ b/package.json
@@ -10,20 +10,25 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.1",
+    "@tsparticles/engine": "^3.1.0",
     "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.1.0",
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-tsparticles": "^2.12.2",
+    "react-type-animation": "^3.2.0",
+    "tsparticles-engine": "^2.12.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
+    "autoprefixer": "^10.4.17",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
+    "postcss": "^8.4.33",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
 }
