--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tsparticles/engine": "^3.1.0",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.1.0",
+    "aos": "^3.0.0-beta.6",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
@@ -21,6 +22,7 @@
     "tsparticles-engine": "^2.12.0"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
